Adjusts in style

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,9 +1,16 @@
 $brand-color: #5ecf80;
+
 $font-primary-color: #000000;
 $font-secondary-color: #4a4a4a;
 $font-tertiary-color: #c1c1c1;
+
+$link-color: $brand-color;
+
 $icon-color: #616161;
 $icon-dark-color: #383838;
+$icon-light-color: #949494;
 $icon-background-color: #f0f0f0;
+
 $border-color: #e0e0e0;
+
 $background-color: #ffffff;
