--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -61,7 +61,7 @@ font-weight: 100
 @import "@material/menu/mdc-menu";
 @import "@material/chips/mdc-chips";
 @import "components/me-components";
-
+@import "@material/fab/mdc-fab";
 
 
 body {
