--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
 
 <body>
   <div class="mdc-drawer-app-content">
-    <header class="me-top-app-bar mdc-top-app-bar app-bar" id="top-bar" style="top: 0">
+    <header class="me-top-app-bar mdc-top-app-bar mdc-top-app-bar--fixed" id="top-bar" style="top: 0">
       <div class="mdc-top-app-bar__row">
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-          <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
+          
           <span class="mdc-top-app-bar__title">
             <a href="/">
               <%= image_tag "logo.png", class: "me-top-app-bar__logo" %>
