--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -5,7 +5,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
 
-        <% if current_user.admin? %>
+        <% if current_user && current_user.admin? %>
           <a href="<%= @event.url %>/edit">Editar</a>
           <a href="/train">Treinar</a>
         <% end %>
