--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -8,8 +8,17 @@ $border-color: #e0e0e0;
 .me-top-app-bar {
   background-color: $fill-color;
   color: $font-color;
-  border-bottom: 1px solid $border-color;
   position: fixed;
+  border-bottom: 1px solid $border-color;
+  @include mdc-layout-grid-media-query_("phone") {
+    background-color: unset;
+    border-bottom: 0;
+
+    &.mdc-top-app-bar--fixed-scrolled {
+      background-color: $background-color;
+      box-shadow: unset;
+    }
+  }
 
   &__logo {
     height: 30px;
@@ -17,6 +26,8 @@ $border-color: #e0e0e0;
   }
 
   &__section {
+    flex: 1 1 0;
+
     &--left {
       @include mdc-layout-grid-media-query_("phone") {
         display: none;
@@ -24,10 +35,12 @@ $border-color: #e0e0e0;
     }
     &--middle {
       display: flex;
-      width: calc(100% / 2);
+      width: 900px;
+      flex: none;
       @include mdc-layout-grid-media-query_("phone") {
         padding: 8px 12px;
         margin: 0 2px;
+        flex: 1 1 0;
       }
     }
     &--right {
@@ -43,14 +56,25 @@ $border-color: #e0e0e0;
       margin: 0;
     }
   }
-
+  
   & .mdc-top-app-bar__row {
     @include mdc-layout-grid-media-query_("phone") {
       height: 65px;
     }
   }
-
+  
   & .mdc-top-app-bar__navigation-icon {
     color: $font-color;
   }
+  
+  @include mdc-layout-grid-media-query_("phone") {
+    & .mdc-text-field:not(.mdc-text-field--disabled) {
+      background-color: white;
+    }
+    
+    & .mdc-text-field--focused {
+      box-shadow: none;
+    }
+  }
+  
 }
