--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -33,14 +33,14 @@
   <div class="mdc-drawer-app-content">
     <header id="top-bar" class="me-top-app-bar mdc-top-app-bar mdc-top-app-bar--fixed" style="top: 0" data-turbolinks-permanent>
       <div class="mdc-top-app-bar__row">
-        <section class="me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+        <section class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
           <span class="mdc-top-app-bar__title">
             <a href="/">
               <%= image_tag "logo.png", class: "me-top-app-bar__logo" %>
             </a>
           </span>
         </section>
-        <section class="me-top-app-bar__section--middle mdc-top-app-bar__section">
+        <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
           <div data-controller="chat" data-target="chat.field" class="me-search-field me-search-field mdc-text-field" id="me-chat" data-turbolinks-permanent>
             <% unless current_user.try('personas_assortment_finished?') %>
               <input data-target="chat.input" autocomplete="false" type="text" placeholder="Oi, tem alguem ai?" id="text-field-shape-one" class="mdc-text-field__input">
@@ -61,7 +61,7 @@
             <% end %>
           </div>
         </section>
-        <section class="me-top-app-bar__section--right mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
+        <section class="me-top-app-bar__section me-top-app-bar__section--right mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
           <% if current_user %>
             <%= link_to current_user.email.split(/@|&|\+/).first, edit_user_path(current_user) %>
             (<%= link_to "Sair", destroy_user_session_path, method: :delete %>)
