--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -8,4 +8,14 @@
       padding-top: 45px;
     }
   }
+  
+  &__events-section {
+    max-width: 600px;
+    margin: auto;
+    padding-top: 85px;
+    
+    @include mdc-layout-grid-media-query_("phone") {
+      padding-top: 45px;
+    }
+  }
 }
